2008-06-11  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bus/bf548_ezkit.c, src/bus/ppc405ep.c, src/bus/sh7727.c,
     src/bus/sa1110.c, src/bus/ppc440gx_ebc8.c, src/bus/tx4925.c,
     src/bus/sh7750r.c, src/bus/pxa2x0.c, src/bus/bf533_stamp.c,
     src/bus/bf533_ezkit.c, src/bus/bf537_stamp.c, src/bus/ixp425.c,
     src/bus/h7202.c, src/bus/mpc824x.c, src/bus/bcm1250.c,
     src/bus/sharc21065l.c, src/bus/au1500.c, src/bus/lh7a400.c,
     src/bus/sh7751r.c, src/bus/mpc5200.c, src/bus/jopcyc.c,
     src/bus/bf561_ezkit.c, src/bus/slsup3.c, src/bus/s3c4510x.c:
     [ 1984813 ] Bus driver cleanup, second step of part 2) (Hartley Sweeten)
     use generic_bus_attach_sig() in all bus drivers

2008-06-10  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bus/generic_bus.c, src/bus/generic_bus.h, src/bus/zefant-xs3.c:
     [ 1984813 ] Bus driver cleanup, first step of part 2) (Hartley Sweeten)
     generic_bus_attach_sig() added

   * src/bus/au1500.c, src/bus/avr32.c, src/bus/bcm1250.c,
     src/bus/bf533_ezkit.c, src/bus/bf533_stamp.c, src/bus/bf537_stamp.c,
     src/bus/bf548_ezkit.c, src/bus/bf561_ezkit.c, src/bus/ejtag.c,
     src/bus/fjmem.c, src/bus/generic_bus.c, src/bus/generic_bus.h,
     src/bus/h7202.c, src/bus/ixp425.c, src/bus/jopcyc.c,
     src/bus/lh7a400.c, src/bus/mpc5200.c, src/bus/mpc824x.c,
     src/bus/ppc405ep.c, src/bus/ppc440gx_ebc8.c, src/bus/prototype.c,
     src/bus/pxa2x0.c, src/bus/s3c4510x.c, src/bus/sa1110.c,
     src/bus/sh7727.c, src/bus/sh7750r.c, src/bus/sh7751r.c,
     src/bus/sharc21065l.c, src/bus/slsup3.c, src/bus/tx4925.c,
     src/bus/zefant-xs3.c:
     [ 1984813 ] Bus driver cleanup, second step of part 4) (Hartley Sweeten)
     generic_bus_read() added

2008-06-09  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bus/bf548_ezkit.c, src/bus/fjmem.c, src/bus/ppc405ep.c,
     src/bus/sh7727.c, src/bus/prototype.c, src/bus/sa1110.c,
     src/bus/ppc440gx_ebc8.c, src/bus/tx4925.c, src/bus/sh7750r.c,